--- a/templates/modern_index.html
+++ b/templates/modern_index.html
@@ -71,7 +71,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link" id="remedy-library-link">
+                <a href="/remedy-library" class="menu-link">
                   <i class="fas fa-mortar-pestle"></i>
                   <span>Remedy Library</span>
                 </a>
@@ -83,13 +83,13 @@
             <h3 class="menu-title">Resources</h3>
             <ul class="menu-items">
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/health-library" class="menu-link">
                   <i class="fas fa-book-medical"></i>
                   <span>Health Library</span>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/find-doctor" class="menu-link">
                   <i class="fas fa-user-md"></i>
                   <span>Find a Doctor</span>
                 </a>
@@ -107,13 +107,13 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/preferences" class="menu-link">
                   <i class="fas fa-cog"></i>
                   <span>Preferences</span>
                 </a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/help-support" class="menu-link">
                   <i class="fas fa-question-circle"></i>
                   <span>Help & Support</span>
                 </a>
